# insuraiq

./: README.md
a2a_server/: Dockerfile  README.md  agent.py  agent_executor.py  main.py  my_dict1.json  pyproject.toml
mcp/: README.md  main.py  pyproject.toml
mcp/insurance_db/: chroma.sqlite3
multi_agent_system/: README.md  a2a_to_adk_adapter.py
multi_agent_system/insuraiq/: agent.py  requirements.txt
ui/: Dockerfile  README.md  angular.json  package-lock.json  package.json
ui/src/: index.html  styles.css
ui/src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts
ui/src/app/home/: home-service.ts  home.css  home.html  home.ts
ui/src/app/login/: login-service.ts  login.css  login.html  login.ts
ui/src/app/shared/: auth-interceptor-interceptor.ts  authguard-guard.ts
ui/src/app/shared/forms/: forms.html  forms.ts
ui/src/app/shared/navbar/: navbar.css  navbar.html  navbar.ts
ui/src/environments/: environment.ts
