[project]
name = "a2a-agent-system"
version = "0.1.0"
description = "Agent hosted in an A2A server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.2.8",
    "fastapi>=0.115.13",
    "google-adk>=1.3.0",
    "litellm>=1.72.6.post1",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
